# algo-trade

./: .env.example  .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml
reports/: momentum_strategy_report.md
results/: momentum_optimal.csv  momentum_test_universes.csv
results/momentum_universes/: factor_diversified_15.csv  growth_defensive_mix.csv  high_beta_tilt.csv  mega_cap_quality.csv
scripts/: __init__.py  check_ib_connection.py  fetch_polygon_daily.py  fetch_quantconnect_daily.py  ingest_universe_snapshot.py  run_mean_reversion_experiment.py  run_momentum_experiment.py  run_ui.py  tune_momentum.py
scripts/configs/: mean_reversion_baseline.json  momentum_baseline.json  momentum_optimal.json
src/algotrade/: __init__.py  config.py
src/algotrade/backtest/: __init__.py  data.py  engine.py  fees.py  portfolio.py  strategy.py
src/algotrade/data/: __init__.py  contracts.py  ingest.py  schemas.py  universe.py
src/algotrade/experiments/: __init__.py  breakout.py  mean_reversion.py  metrics.py  momentum.py  vcp.py
src/algotrade/strategies/: __init__.py  breakout.py  mean_reversion.py  momentum.py  vcp.py
src/algotrade/ui/: __init__.py  app.py
src/algotrade/ui/static/: app.js  (+1 more)
tests/: test_backtest_engine.py  test_breakout_strategy.py  test_data_ingest.py  test_data_schema.py  test_experiment_mean_reversion.py  test_fetch_polygon_cli.py  test_ibkr_quote_helpers.py  test_live_trade_helpers.py  test_live_trade_iteration.py  test_mean_reversion_strategy.py  test_polygon_provider.py  test_ui_api.py  test_universe.py  test_vcp_scan.py  test_vcp_universe.py
(+16 files in other folders)
