[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-trade"
version = "0.1.0"
description = "US equities trading research and execution stack for IBKR TWS."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Baron" }
]
dependencies = [
    "ib-insync>=0.9.86",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.4.0",
    "pytz>=2023.3",
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.2",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "black>=24.4.0",
    "mypy>=1.6.1",
    "pre-commit>=3.5.0"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I", "UP", "N", "D"]
ignore = ["D105", "D107", "D203", "D212"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
